--- a/style.scss
+++ b/style.scss
@@ -14,10 +14,137 @@ body{
     background: $grey;
 }
 
+// del
+
+.test{
+    position: relative;
+
+    & img{
+        position: absolute;
+        top: -139px;
+        left: -13px;
+
+        display: block;
+
+        opacity: .3;
+    }
+}
+
+// del
+
+
 // tablet start
 
+.table{
+    display: flex;
+    align-items: center;
 
+    position: relative;
+    &__front-side{
+        width: 180px;
+        height: 100px;
 
+        background: $black;
+
+        border-radius: 50px 0px 0px 50px;
+
+        position: relative;
+    }
+
+    &__circle-front-side{
+        position: absolute;
+        top: 0;
+        right: -22px;
+
+        width: 40px; 
+        height: calc(100px - 4px);
+
+        background-color: $white;
+        border-radius: 40px/96px;
+        border: 2px solid $black;
+
+        overflow: hidden;
+    }
+
+    &__backside{
+        margin-left: 200px;
+
+        width: 180px;
+        height: 100px;
+
+        background: $pink;
+
+        border-radius: 0px 50px 50px 0px;
+
+        position: relative;
+        &::after{
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -22px;
+
+            width: 40px; 
+            height: calc(100px - 4px);
+
+            background-color: $pink;
+            border-radius: 100px/200px;
+            border: 2px solid $pink;
+        }
+
+        z-index: 3;
+    }
+
+    &__element{
+        margin-left: -100px;
+
+        border-radius: 50%;
+        border: 2px solid;
+
+        &_black{
+            width: 30px;
+            height: 30px;
+
+            background: $black;
+        }
+        &_pink-light{
+            width: 10px;
+            height: 10px;
+
+            background: $pinkLight;
+            border-color: $pinkLight;
+        }
+        &_pink{
+            width: 20px;
+            height: 20px;
+
+            background: $pink;
+            border-color: $pink;
+        }
+        &_grey{
+            width: 5px;
+            height: 5px;
+
+            background: $greyLight;
+            border-color: $greyLight;
+        }
+    }
+
+    &__block-animation{
+        position: absolute;
+        top: 0px;
+        left: 158px;
+
+        width: 300px;
+        height: calc(100px - 4px);
+
+        border-radius: 40px / 96px;
+        overflow: hidden;
+
+        border: 2px solid rgba($color: #000000, $alpha: 0);
+        // background: tomato;
+        // opacity: .3;
+    }
+}
 
 @keyframes move{
     from {
@@ -27,4 +154,4 @@ body{
     }
 }
 
-// tablet end
+// tablet start
