--- a/style.scss
+++ b/style.scss
@@ -32,6 +32,14 @@ body{
 
 // del
 
+@mixin move ($delay: 0){
+    animation-name: move;
+    animation-duration: 5s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    animation-timing-function: ease-in;
+    animation-delay: $delay;
+}
 
 // tablet start
 
@@ -40,6 +48,8 @@ body{
     align-items: center;
 
     position: relative;
+
+    transform: rotate(30deg);
     &__front-side{
         width: 180px;
         height: 100px;
@@ -67,7 +77,7 @@ body{
     }
 
     &__backside{
-        margin-left: 200px;
+        margin-left: 100px;
 
         width: 180px;
         height: 100px;
@@ -96,6 +106,7 @@ body{
 
     &__element{
         margin-left: -100px;
+        margin-top: 5px;
 
         border-radius: 50%;
         border: 2px solid;
@@ -105,6 +116,8 @@ body{
             height: 30px;
 
             background: $black;
+
+            @include move(3s);
         }
         &_pink-light{
             width: 10px;
@@ -112,6 +125,8 @@ body{
 
             background: $pinkLight;
             border-color: $pinkLight;
+
+            @include move();
         }
         &_pink{
             width: 20px;
@@ -119,6 +134,7 @@ body{
 
             background: $pink;
             border-color: $pink;
+            @include move(.3s);
         }
         &_grey{
             width: 5px;
@@ -126,6 +142,8 @@ body{
 
             background: $greyLight;
             border-color: $greyLight;
+
+            @include move(2s);
         }
     }
 
@@ -134,23 +152,20 @@ body{
         top: 0px;
         left: 158px;
 
-        width: 300px;
+        width: 150px;
         height: calc(100px - 4px);
-
         border-radius: 40px / 96px;
         overflow: hidden;
 
         border: 2px solid rgba($color: #000000, $alpha: 0);
-        // background: tomato;
-        // opacity: .3;
     }
 }
 
 @keyframes move{
     from {
-
+        margin-left: -100px;
     } to {
-
+        margin-left: 130px;
     }
 }
 
